Closed
Bug 196661
Opened 22 years ago
Closed 22 years ago
non browser windows go from front to back when switching apps
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.8
People
(Reporter: dwalker07, Assigned: mikepinkerton)
Details
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.0.1) Gecko/20030306 Camino/0.7
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.0.1) Gecko/20030306 Camino/0.7
When switching to Camino from another application, via using Camino's dock tile,
the download window, if the frontmost Camino window before app switching, now
goes behind the browser window. In other words, the Camino windows change their
relative order upon the switch, which I don't think should happen. The download
window's inappropiate moving happens at switch-in; I didn't see it move at
switch-out. Also, the behavior does NOT occur if the switch-in happens with the
command-tab shortcut! (I've only tested with a single browser window.)
Reproducible: Always
Steps to Reproduce:
1.start a download, and keep the download window in front of the browser window
2.switch to another application
3.switch back to Camino, via pressing its dock tile
4.(note that it doesn't happen if the command-tab keypress is used instead)
Actual Results:
the download window appeared behind the browser window
Expected Results:
the windows should keep their relative order, having the download window still
in front of the browser window
Confirmed using Camino/2003030613.
Assignee: sdagley → saari
Status: UNCONFIRMED → NEW
Component: Downloading → General
Ever confirmed: true
QA Contact: petersen → winnie
| Assignee | ||
Comment 2•22 years ago
|
||
happens with any window that's not a browser window. i'll look at it.
Assignee: saari → pinkerton
Summary: Sometimes download-window goes from front to back when switching apps → non browser windows go from front to back when switching apps
Target Milestone: --- → Camino0.8
Problem seems to be in:
-(NSWindow*)getFrontmostBrowserWindow
in MainController.mm. We ignore a bunch of windows that don't fit these criteria:
if (chromeMask == 0 ||
(chromeMask & nsIWebBrowserChrome::CHROME_TOOLBAR &&
chromeMask & nsIWebBrowserChrome::CHROME_STATUSBAR &&
chromeMask & nsIWebBrowserChrome::CHROME_WINDOW_RESIZE))
Commenting out everything in that method and just doing "[NSApp mainWindow]"
fixes this bug but I suspect it causes others.
Comment 4•22 years ago
|
||
A feature we have is that if there's only one window open, and it's the download
manager, or the prefs, and you click on the dock icon. It will then open a new
browser window automatically. This I think is good and so any fix for this
should preserve that.
| Assignee | ||
Comment 5•22 years ago
|
||
f.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•