keep whatever utility window is in the fg when user clicks on dock tile and don't bring an existing browser in front of it (bug 196661)